--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,27 @@ body {
 .light.shop-cart .counter input {
   color: #000;
 }
+.appointmentBtn span{
+  color: #000;
+  background-color: #fff;
+  border-radius: 20px !important;
+  padding: 0 1rem;
+}
+.traductionSelect select{
+  color: #fff;
+  background-color: #1d1d1d;
+  border-radius: 20px !important;
+  padding: 0.5rem 1rem;
+}
+@media screen and (max-width:992px) {
+  .appointmentBtn span{
+    color: #fff;
+    background-color: #1d1d1d !important;
+    border-radius: 0px !important;
+    padding: 0px !important;
+  }
+  .traductionSelect select{
+    margin: 0rem 1.5rem;
+    border-radius: 10px !important;
+  }
+}
